@@ -1,8 +1,1 @@
-sbin
-etc/mdadm
-usr/share/mdadm
-usr/share/initramfs-tools/hooks
-usr/share/initramfs-tools/scripts/local-top
-usr/share/bug/mdadm
-usr/share/lintian/overrides
 var/lib/mdadm
